# OC-DataScientist

P2_Analysez-donnees-systemes-educatifs/: pyproject.toml
P2_Analysez-donnees-systemes-educatifs/quarto_project/: index.qmd
P2_Analysez-donnees-systemes-educatifs/quarto_project/_output/: LAFON_Guillaume_2_presentation_012025.pptx
