[project]
authors = [{ name = "laguill", email = "guillaumelafon13@gmail.com" }]
description = "Add a short description here"
name = "P2_Analysez-donnees-systemes-educatifs"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.13.1,<3.14"
jupyterlab = ">=4.3.4,<5"
ipykernel = ">=6.29.5,<7"
mypy = ">=1.14.1,<2"
ruff = ">=0.9.0,<0.10"
pixi-kernel = ">=0.6.0,<0.7"
seaborn = ">=0.13.2,<0.14"
pandas = ">=2.2.3,<3"
ipywidgets = ">=8.1.5,<9"
openpyxl = ">=3.1.5,<4"
pandas-stubs = ">=2.2.3.241126,<3"
quarto = ">=1.5.57,<2"
basedpyright = ">=1.23.2,<2"
itables = ">=2.2.4,<3"
jupyter-cache = ">=1.0.1,<2"
missingno = ">=0.5.2,<0.6"
pyarrow = ">=18.1.0,<19"
geopandas = ">=1.0.1,<2"


[tool.ruff]
line-length = 120
extend-include = ["*.ipynb", "*.qmd"]

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN",    # Mypy is better at this
  "COM",    # Formatter takes care of our commas
  "E501",   # leave line-length enforcement to formatter
  "T201",   # I am using print
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",   # D100-104 missing docstring
  "D107",   # undocumented-public-init
  "INP001", # missing __init__ in external library
]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["W505"]

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.mypy]
# Prototypage
check_untyped_defs = false    # Ne vérifie pas les fonctions non typées
follow_imports = "skip"       # Ignore les modules importés
ignore_missing_imports = true # Ignore les erreurs d'importations
pretty = true                 # Enhance the readability of error messages
show_column_numbers = true
warn_unused_configs = true    # Alerte sur des options non reconnues

[tool.pyright]
typeCheckingMode = "recommended"
reportAny = "none"                 # Disable checks for implicit Any
reportExplicitAny = "none"         # Disable checks for explicit Any
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
